[package]
name = "mp3rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
walkdir = "2.3"
tokio = { version = "*", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }

